// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer snapshots renders 1`] = `
.c28 {
  display: flex;
  flex-direction: row;
  align-items: start;
  width: 100%;
  justify-content: center;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-end;
}

.c4 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: start;
  width: 100%;
}

.c8 {
  display: flex;
  flex-direction: column;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c14 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
  justify-content: flex-start;
}

.c18 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

.c20 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c6 svg {
  fill: #737373;
  height: 24px;
  width: 24px;
}

.c6 svg path.path-fill,
.c6 svg line.path-fill,
.c6 svg polygon.path-fill,
.c6 svg rect.path-fill,
.c6 svg circle.path-fill,
.c6 svg polyline.path-fill {
  fill: #737373!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c6 svg path.stroke-fill,
.c6 svg line.stroke-fill,
.c6 svg polygon.stroke-fill,
.c6 svg rect.stroke-fill,
.c6 svg circle.stroke-fill,
.c6 svg polyline.stroke-fill {
  stroke: #737373!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c6 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c6.downward {
  transform: rotate(180deg);
}

.c6.upward {
  transform: initial;
}

.c6 .c17 {
  margin-left: 4px;
  color: #737373;
}

.c6 img {
  width: 24px;
}

.c16 svg {
  height: 16px;
  width: 16px;
}

.c16 svg path.path-fill,
.c16 svg line.path-fill,
.c16 svg polygon.path-fill,
.c16 svg rect.path-fill,
.c16 svg circle.path-fill,
.c16 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c16 svg path.stroke-fill,
.c16 svg line.stroke-fill,
.c16 svg polygon.stroke-fill,
.c16 svg rect.stroke-fill,
.c16 svg circle.stroke-fill,
.c16 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c16 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c16.downward {
  transform: rotate(180deg);
}

.c16.upward {
  transform: initial;
}

.c16 .c17 {
  margin-left: 4px;
}

.c16 img {
  width: 16px;
}

.c21 svg {
  fill: #BC3B1D;
  height: 24px;
  width: 24px;
}

.c21 svg path.path-fill,
.c21 svg line.path-fill,
.c21 svg polygon.path-fill,
.c21 svg rect.path-fill,
.c21 svg circle.path-fill,
.c21 svg polyline.path-fill {
  fill: #BC3B1D!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c21 svg path.stroke-fill,
.c21 svg line.stroke-fill,
.c21 svg polygon.stroke-fill,
.c21 svg rect.stroke-fill,
.c21 svg circle.stroke-fill,
.c21 svg polyline.stroke-fill {
  stroke: #BC3B1D!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c21 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c21.downward {
  transform: rotate(180deg);
}

.c21.upward {
  transform: initial;
}

.c21 .c17 {
  margin-left: 4px;
  color: #BC3B1D;
}

.c21 img {
  width: 24px;
}

.c26 svg {
  height: 24px;
  width: 24px;
}

.c26 svg path.path-fill,
.c26 svg line.path-fill,
.c26 svg polygon.path-fill,
.c26 svg rect.path-fill,
.c26 svg circle.path-fill,
.c26 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c26 svg path.stroke-fill,
.c26 svg line.stroke-fill,
.c26 svg polygon.stroke-fill,
.c26 svg rect.stroke-fill,
.c26 svg circle.stroke-fill,
.c26 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c26 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c26.downward {
  transform: rotate(180deg);
}

.c26.upward {
  transform: initial;
}

.c26 .c17 {
  margin-left: 4px;
}

.c26 img {
  width: 24px;
}

.c19 {
  text-decoration: none;
}

.c3.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c3.MuiButton-text {
  padding: 0;
}

.c15.MuiButton-root {
  margin: 0;
  text-transform: none;
  letter-spacing: 0;
}

.c15.MuiButton-text {
  min-width: 0px;
}

.c15.MuiButton-text .selected {
  color: #1a1a1a;
}

.c15.arrow {
  min-width: 0px;
}

.c12 {
  max-width: 100%;
}

.c9 {
  width: 100%;
  flex-wrap: nowrap;
  overflow-x: hidden;
}

.c9 h2 {
  padding: 8px;
  font-size: 12px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.c9 .MuiTableRow-root {
  transition: background 0.5s ease-in-out;
}

.c9 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  transition: background 0.5s ease-in-out;
}

.c9 .MuiTableCell-root {
  border-color: #d8d8d8;
}

.c9 table {
  margin-top: 12px;
}

.c9 th {
  padding: 0;
  background: #F6F7F9;
}

.c9 th .MuiCheckbox-root {
  padding: 4px 9px;
}

.c9 th :first-child {
  border-top-left-radius: 4px;
}

.c9 th :last-child {
  border-top-right-radius: 4px;
}

.c9 td {
  padding-left: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiButton-text:hover {
  background-color: #f5f5f5;
}

.c10 {
  width: 100%;
}

.c10>div:first-child {
  justify-content: flex-start;
}

.c23 {
  position: relative;
  height: 100%;
  transition-property: width,left;
  transition-duration: 0.5s;
  transition-timing-function: linear;
  overflow: hidden;
  width: 0px;
  flex: 2;
  left: 24px;
}

.c23.open {
  left: 0;
  width: 375px;
}

.c24 {
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding-left: 32px;
}

.c22 {
  overflow: hidden;
  white-space: nowrap;
}

.c27 ul {
  padding: 0px 8px;
}

.c27 h2 {
  margin-top: 0;
}

.c27 h3 {
  margin-bottom: 0;
}

.c29 .c5 .MuiSvgIcon-root {
  color: unset;
}

.c25 {
  position: relative;
}

.c25 svg {
  margin-right: 8px;
}

.c25 input {
  padding: 8px 10px;
  border-bottom: 1px solid #1a1a1a;
}

.c0 {
  width: 100%;
}

.c0 .MuiButton-text:hover {
  background-color: #f5f5f5;
}

.c11 table tbody {
  opacity: 1;
}

<div>
  <div
    class="c0 Explorer"
  >
    <div
      class="c1"
    >
      <div
        style="width: 80px;"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-hmz33t-MuiCircularProgress-root"
          role="progressbar"
          style="width: 24px; height: 24px; display: none;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <div
        class="c2"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorInherit MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorInherit MuiButton-disableElevation c3 css-y8ewym-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <div
            class="c4 c5 c6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterListIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
              />
            </svg>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9 c10 c11 ExplorerTable"
      >
        <div
          class="c2 c12"
        />
        <div
          class="c13"
        >
          <div
            class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
          >
            <table
              class="MuiTable-root css-yzrxof-MuiTable-root"
            >
              <thead
                class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-15873pz-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class="selected"
                        >
                          Name
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="c4 c5 c16 downward"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowUpwardIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                          />
                        </svg>
                      </div>
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Kind
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Namespace
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Cluster
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Tenant
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Status
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Message
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/kustomization?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      Kustomization
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c21"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ErrorIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
                              />
                            </svg>
                          </div>
                        </div>
                        Ready
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="c22 FilterDrawer"
      >
        <div
          class="c23"
        >
          <div
            class="c24"
          >
            <div
              class="MuiBox-root css-hpgf8j"
            >
              <div>
                <h2>
                  Filters
                </h2>
              </div>
              <div>
                <div
                  class="c7 c25 QueryInput"
                >
                  <div
                    class="c4"
                  >
                    <div
                      class="c4 c5 c26"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="SearchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root Input css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-up4kyd-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiOutlinedInput-input css-1c9mltt-MuiInputBase-input-MuiOutlinedInput-input"
                            id="searchinput"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-ihdtdm"
                            >
                              <span
                                class="notranslate"
                              >
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c27 Filters"
                >
                  <div>
                    <h3>
                      Kind
                    </h3>
                    <ul
                      style="list-style: none;"
                    >
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            Kustomization
                          </span>
                        </label>
                      </li>
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            HelmRelease
                          </span>
                        </label>
                      </li>
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            GitRepository
                          </span>
                        </label>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c28 c29 PaginationControls"
    >
      <div
        class="MuiBox-root css-19midj6"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="c4 c5 c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="NavigateBeforeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </div>
        </button>
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="c4 c5 c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer snapshots renders status indicators 1`] = `
.c31 {
  display: flex;
  flex-direction: row;
  align-items: start;
  width: 100%;
  justify-content: center;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-end;
}

.c4 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: start;
  width: 100%;
}

.c8 {
  display: flex;
  flex-direction: column;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c14 {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
  justify-content: flex-start;
}

.c18 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

.c20 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c6 svg {
  fill: #737373;
  height: 24px;
  width: 24px;
}

.c6 svg path.path-fill,
.c6 svg line.path-fill,
.c6 svg polygon.path-fill,
.c6 svg rect.path-fill,
.c6 svg circle.path-fill,
.c6 svg polyline.path-fill {
  fill: #737373!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c6 svg path.stroke-fill,
.c6 svg line.stroke-fill,
.c6 svg polygon.stroke-fill,
.c6 svg rect.stroke-fill,
.c6 svg circle.stroke-fill,
.c6 svg polyline.stroke-fill {
  stroke: #737373!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c6 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c6.downward {
  transform: rotate(180deg);
}

.c6.upward {
  transform: initial;
}

.c6 .c17 {
  margin-left: 4px;
  color: #737373;
}

.c6 img {
  width: 24px;
}

.c16 svg {
  height: 16px;
  width: 16px;
}

.c16 svg path.path-fill,
.c16 svg line.path-fill,
.c16 svg polygon.path-fill,
.c16 svg rect.path-fill,
.c16 svg circle.path-fill,
.c16 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c16 svg path.stroke-fill,
.c16 svg line.stroke-fill,
.c16 svg polygon.stroke-fill,
.c16 svg rect.stroke-fill,
.c16 svg circle.stroke-fill,
.c16 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c16 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c16.downward {
  transform: rotate(180deg);
}

.c16.upward {
  transform: initial;
}

.c16 .c17 {
  margin-left: 4px;
}

.c16 img {
  width: 16px;
}

.c21 svg {
  fill: #27AE60;
  height: 24px;
  width: 24px;
}

.c21 svg path.path-fill,
.c21 svg line.path-fill,
.c21 svg polygon.path-fill,
.c21 svg rect.path-fill,
.c21 svg circle.path-fill,
.c21 svg polyline.path-fill {
  fill: #27AE60!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c21 svg path.stroke-fill,
.c21 svg line.stroke-fill,
.c21 svg polygon.stroke-fill,
.c21 svg rect.stroke-fill,
.c21 svg circle.stroke-fill,
.c21 svg polyline.stroke-fill {
  stroke: #27AE60!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c21 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c21.downward {
  transform: rotate(180deg);
}

.c21.upward {
  transform: initial;
}

.c21 .c17 {
  margin-left: 4px;
  color: #27AE60;
}

.c21 img {
  width: 24px;
}

.c22 svg {
  fill: #BC3B1D;
  height: 24px;
  width: 24px;
}

.c22 svg path.path-fill,
.c22 svg line.path-fill,
.c22 svg polygon.path-fill,
.c22 svg rect.path-fill,
.c22 svg circle.path-fill,
.c22 svg polyline.path-fill {
  fill: #BC3B1D!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c22 svg path.stroke-fill,
.c22 svg line.stroke-fill,
.c22 svg polygon.stroke-fill,
.c22 svg rect.stroke-fill,
.c22 svg circle.stroke-fill,
.c22 svg polyline.stroke-fill {
  stroke: #BC3B1D!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c22 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c22.downward {
  transform: rotate(180deg);
}

.c22.upward {
  transform: initial;
}

.c22 .c17 {
  margin-left: 4px;
  color: #BC3B1D;
}

.c22 img {
  width: 24px;
}

.c23 svg {
  fill: #00b3ec;
  height: 24px;
  width: 24px;
}

.c23 svg path.path-fill,
.c23 svg line.path-fill,
.c23 svg polygon.path-fill,
.c23 svg rect.path-fill,
.c23 svg circle.path-fill,
.c23 svg polyline.path-fill {
  fill: #00b3ec!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c23 svg path.stroke-fill,
.c23 svg line.stroke-fill,
.c23 svg polygon.stroke-fill,
.c23 svg rect.stroke-fill,
.c23 svg circle.stroke-fill,
.c23 svg polyline.stroke-fill {
  stroke: #00b3ec!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c23 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c23.downward {
  transform: rotate(180deg);
}

.c23.upward {
  transform: initial;
}

.c23 .c17 {
  margin-left: 4px;
  color: #00b3ec;
}

.c23 img {
  width: 24px;
}

.c24 svg {
  fill: #F2994A;
  height: 24px;
  width: 24px;
}

.c24 svg path.path-fill,
.c24 svg line.path-fill,
.c24 svg polygon.path-fill,
.c24 svg rect.path-fill,
.c24 svg circle.path-fill,
.c24 svg polyline.path-fill {
  fill: #F2994A!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c24 svg path.stroke-fill,
.c24 svg line.stroke-fill,
.c24 svg polygon.stroke-fill,
.c24 svg rect.stroke-fill,
.c24 svg circle.stroke-fill,
.c24 svg polyline.stroke-fill {
  stroke: #F2994A!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c24 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c24.downward {
  transform: rotate(180deg);
}

.c24.upward {
  transform: initial;
}

.c24 .c17 {
  margin-left: 4px;
  color: #F2994A;
}

.c24 img {
  width: 24px;
}

.c29 svg {
  height: 24px;
  width: 24px;
}

.c29 svg path.path-fill,
.c29 svg line.path-fill,
.c29 svg polygon.path-fill,
.c29 svg rect.path-fill,
.c29 svg circle.path-fill,
.c29 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c29 svg path.stroke-fill,
.c29 svg line.stroke-fill,
.c29 svg polygon.stroke-fill,
.c29 svg rect.stroke-fill,
.c29 svg circle.stroke-fill,
.c29 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c29 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c29.downward {
  transform: rotate(180deg);
}

.c29.upward {
  transform: initial;
}

.c29 .c17 {
  margin-left: 4px;
}

.c29 img {
  width: 24px;
}

.c19 {
  text-decoration: none;
}

.c3.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c3.MuiButton-text {
  padding: 0;
}

.c15.MuiButton-root {
  margin: 0;
  text-transform: none;
  letter-spacing: 0;
}

.c15.MuiButton-text {
  min-width: 0px;
}

.c15.MuiButton-text .selected {
  color: #1a1a1a;
}

.c15.arrow {
  min-width: 0px;
}

.c12 {
  max-width: 100%;
}

.c9 {
  width: 100%;
  flex-wrap: nowrap;
  overflow-x: hidden;
}

.c9 h2 {
  padding: 8px;
  font-size: 12px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.c9 .MuiTableRow-root {
  transition: background 0.5s ease-in-out;
}

.c9 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  transition: background 0.5s ease-in-out;
}

.c9 .MuiTableCell-root {
  border-color: #d8d8d8;
}

.c9 table {
  margin-top: 12px;
}

.c9 th {
  padding: 0;
  background: #F6F7F9;
}

.c9 th .MuiCheckbox-root {
  padding: 4px 9px;
}

.c9 th :first-child {
  border-top-left-radius: 4px;
}

.c9 th :last-child {
  border-top-right-radius: 4px;
}

.c9 td {
  padding-left: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 .MuiButton-text:hover {
  background-color: #f5f5f5;
}

.c10 {
  width: 100%;
}

.c10>div:first-child {
  justify-content: flex-start;
}

.c26 {
  position: relative;
  height: 100%;
  transition-property: width,left;
  transition-duration: 0.5s;
  transition-timing-function: linear;
  overflow: hidden;
  width: 0px;
  flex: 2;
  left: 24px;
}

.c26.open {
  left: 0;
  width: 375px;
}

.c27 {
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding-left: 32px;
}

.c25 {
  overflow: hidden;
  white-space: nowrap;
}

.c30 ul {
  padding: 0px 8px;
}

.c30 h2 {
  margin-top: 0;
}

.c30 h3 {
  margin-bottom: 0;
}

.c32 .c5 .MuiSvgIcon-root {
  color: unset;
}

.c28 {
  position: relative;
}

.c28 svg {
  margin-right: 8px;
}

.c28 input {
  padding: 8px 10px;
  border-bottom: 1px solid #1a1a1a;
}

.c0 {
  width: 100%;
}

.c0 .MuiButton-text:hover {
  background-color: #f5f5f5;
}

.c11 table tbody {
  opacity: 1;
}

<div>
  <div
    class="c0 Explorer"
  >
    <div
      class="c1"
    >
      <div
        style="width: 80px;"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-hmz33t-MuiCircularProgress-root"
          role="progressbar"
          style="width: 24px; height: 24px; display: none;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <div
        class="c2"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorInherit MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorInherit MuiButton-disableElevation c3 css-y8ewym-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <div
            class="c4 c5 c6"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterListIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
              />
            </svg>
          </div>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c8 c9 c10 c11 ExplorerTable"
      >
        <div
          class="c2 c12"
        />
        <div
          class="c13"
        >
          <div
            class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
          >
            <table
              class="MuiTable-root css-yzrxof-MuiTable-root"
            >
              <thead
                class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-15873pz-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class="selected"
                        >
                          Name
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="c4 c5 c16 downward"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowUpwardIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                          />
                        </svg>
                      </div>
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Kind
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Namespace
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Cluster
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Tenant
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Status
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1e63zel-MuiTableCell-root"
                    scope="col"
                  >
                    <div
                      class="c14"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit MuiButton-root MuiButton-text MuiButton-textInherit MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInherit c15 css-1m44rlk-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <h2
                          class=""
                        >
                          Message
                        </h2>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        style="width: 16px;"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/kustomization?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      Kustomization
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c21"
                          >
                            <img
                              alt="success"
                            />
                          </div>
                        </div>
                        Success
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/helm_release?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      HelmRelease
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c22"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ErrorIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
                              />
                            </svg>
                          </div>
                        </div>
                        Failed
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/kustomization?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      Kustomization
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c23"
                          >
                            <img
                              alt="reconciling"
                            />
                          </div>
                        </div>
                        Reconciling
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/git_repo?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      GitRepository
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c24"
                          >
                            <img
                              alt="suspended"
                            />
                          </div>
                        </div>
                        Suspended
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/kustomization?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      Kustomization
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <div
                        class="c4"
                      >
                        <div
                          class="MuiBox-root css-12z0wuy"
                        >
                          <div
                            class="c4 c5 c24"
                          >
                            <img
                              alt="pending"
                            />
                          </div>
                        </div>
                        PendingAction
                      </div>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-15873pz-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      <a
                        class="c19 Link"
                        href="/git_repo?name=flux-system&namespace=flux-system"
                      >
                        <span
                          class="c17 c20"
                          color="primary"
                        >
                          flux-system
                        </span>
                      </a>
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      GitRepository
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      flux-system
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-otcjd0-MuiTableCell-root"
                    style="max-width: 600px;"
                  >
                    <span
                      class="c17 c18"
                    >
                      -
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="c25 FilterDrawer"
      >
        <div
          class="c26"
        >
          <div
            class="c27"
          >
            <div
              class="MuiBox-root css-hpgf8j"
            >
              <div>
                <h2>
                  Filters
                </h2>
              </div>
              <div>
                <div
                  class="c7 c28 QueryInput"
                >
                  <div
                    class="c4"
                  >
                    <div
                      class="c4 c5 c29"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="SearchIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root Input css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-up4kyd-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiOutlinedInput-input css-1c9mltt-MuiInputBase-input-MuiOutlinedInput-input"
                            id="searchinput"
                            placeholder="Search"
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-ihdtdm"
                            >
                              <span
                                class="notranslate"
                              >
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c30 Filters"
                >
                  <div>
                    <h3>
                      Kind
                    </h3>
                    <ul
                      style="list-style: none;"
                    >
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            Kustomization
                          </span>
                        </label>
                      </li>
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            HelmRelease
                          </span>
                        </label>
                      </li>
                      <li>
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-txtfem-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1la4ztv-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1ltp61-MuiTypography-root"
                          >
                            GitRepository
                          </span>
                        </label>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c31 c32 PaginationControls"
    >
      <div
        class="MuiBox-root css-19midj6"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="c4 c5 c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="NavigateBeforeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </div>
        </button>
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="c4 c5 c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
